RP-1001 Improve performance of 'Concepts Used As Definiting Attributes' Report